make it mostly work on mobile (still need to fix the logo section)

--- a/index.css
+++ b/index.css
@@ -53,3 +53,37 @@ small, .font_small {font-size: 0.667em;}
     padding: 2em;
     color: #e3dfff;
 }
+
+
+/* responsive! */
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+      body {
+        margin-left: 5em;
+        margin-right: 5em;
+      }
+
+      .font-display {
+          flex-direction: column
+      }
+
+      .colorbar {
+          width: calc(100% - 4em)
+      }
+
+      .work-sans-display {
+          margin-left: 0 !important
+      }
+
+      .chivo-display {
+          margin-bottom: 4em
+      }
+
+      .font-display-unit {
+          width: calc(100% - 4em)
+      }
+}
